# embassy-stm32f469i-disco

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  memory.x  run_hil.sh  run_tests.sh  run_usb_cdc_test.sh  run_usb_tests.sh
.cargo/: config.toml
.github/workflows/: ci.yml
.sisyphus/evidence/: task-10-build.txt  task-11-build.txt  task-5-build.txt  task-5-clippy.txt  task-5-pub-api.txt  task-6-clippy.txt  task-6-examples-build.txt  task-7-build.txt  task-8-build.txt  task-9-build.txt
.sisyphus/notepads/bsp-productionization/: learnings.md
.sisyphus/notes/: nt35510-api-gaps.md
docs/: CLOCK-Configurations.md  HARDWARE-TEST-PLAN.md  PIN-CONSUMPTION.md  USB-GUIDE.md  display-init-comparison-v2.md  display-init-comparison.md  known-issues.md
examples/: async_cdc_minimal.rs  async_display_test.rs  blink.rs  board_blinky.rs  board_display.rs  board_touch.rs  display_blinky.rs  display_hybrid.rs  display_minimal.rs  display_test_rgb565.rs  display_touch.rs  display_touch_rgb565.rs  embassy_display_bsp_minimal.rs  extensive_hw_test.rs  hil_display.rs  hil_rng.rs  hil_sdram.rs  hil_touch.rs  hil_usart6_loopback.rs  hw_diag.rs  nt35510_hwtest.rs  sdram_test.rs  test_adc.rs  test_async_timer.rs  test_clk48_hypothesis.rs  test_display.rs  test_display_interactive.rs  test_dma.rs  test_gpio.rs  test_itm_swo.rs  test_led.rs  test_rng.rs  test_rng_180.rs  test_sdram.rs  test_sdram_full.rs  test_sdram_soak.rs  test_touch.rs  test_uart.rs  test_usb.rs  test_usb_cdc.rs  (+2 more)
examples/bringup/: README.md  clk48_hypothesis.rs  nt35510_register_probe.rs  raw_display_minimal.rs  raw_dsi_bringup.rs  sdram_raw.rs
src/: bist.rs  board.rs  clock.rs  display.rs  dsi.rs  framebuffer.rs  lib.rs  ltdc.rs  sdram.rs  touch.rs  uart.rs  usb.rs
src/panel/: mod.rs  nt35510.rs
test-results/: .gitignore
tests/: README.md  on_target.rs  read_test_results.py  usb_cdc_stress.py  usb_cdc_test.py
