[package]
name = "embassy-stm32f469i-disco"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Board support package for STM32F469I-Discovery with Embassy async framework"
repository = "https://github.com/Amperstrand/embassy-stm32f469i-disco"
keywords = ["embedded", "stm32", "discovery", "embassy", "async", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = ["display", "touch"]
display = ["dep:stm32-fmc", "dep:nt35510", "dep:embedded-display-controller", "dep:embedded-graphics"]
touch = []

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", package = "embassy-stm32", rev = "84444a19", features = ["stm32f469ni", "time-driver-any", "exti"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time", rev = "84444a19" }
cortex-m = "0.7"
embedded-hal = "1.0"

# Display dependencies
stm32-fmc = { version = "0.4.0", features = ["sdram"], optional = true }
nt35510 = { version = "0.1.0", optional = true }
embedded-display-controller = { version = "0.2.0", optional = true }
embedded-graphics = { version = "0.8", optional = true }

[dev-dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", package = "embassy-executor", rev = "84444a19", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb", rev = "84444a19" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", package = "embassy-futures", rev = "84444a19" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", package = "embassy-sync", rev = "84444a19" }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-graphics = "0.8"
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
stm32-metapac = { version = "21", default-features = false, features = ["stm32f469ni"] }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7" }
embedded-io = "0.7"
