[package]
name = "embassy-stm32f469i-disco"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Board support package for STM32F469I-Discovery with Embassy async framework"
readme = "README.md"
repository = "https://github.com/Amperstrand/embassy-stm32f469i-disco"
keywords = ["embedded", "stm32", "discovery", "embassy", "async", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = ["display", "touch"]
display = ["dep:stm32-fmc", "dep:nt35510", "dep:embedded-display-controller", "dep:embedded-graphics", "dep:otm8009a", "dep:embedded-hal-02"]
touch = []
defmt = ["dep:defmt"]

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["stm32f469ni", "time-driver-any", "exti"] }
embassy-time = { version = "0.5.1" }
cortex-m = "0.7"
defmt = { version = "1.0", optional = true }
embedded-hal = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", optional = true }

# Display dependencies
stm32-fmc = { version = "0.4.0", features = ["sdram"], optional = true }
nt35510 = { git = "https://github.com/Amperstrand/nt35510", rev = "263d8e4", optional = true }
otm8009a = { version = "0.1.0", optional = true }
embedded-display-controller = { version = "0.2.0", optional = true }
embedded-graphics = { version = "0.8", optional = true }
stm32-metapac = { version = "21", default-features = false, features = ["stm32f469ni"] }

[dev-dependencies]
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-usb = { version = "0.6.0" }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.8.0" }
defmt = "1.0"
defmt-rtt = { version = "1.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-graphics = "0.8"
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
stm32-metapac = { version = "21", default-features = false, features = ["stm32f469ni"] }
embedded-io = "0.7"
panic-halt = "1.0"
heapless = "0.8"
linked_list_allocator = "0.10"
static_cell = "2"

