[package]
name = "embassy-stm32f469i-disco"
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
description = "Embassy async BSP for the STM32F469I-Discovery board (display, SDRAM, touch, USB)"
readme = "README.md"
repository = "https://github.com/Amperstrand/embassy-stm32f469i-disco"
homepage = "https://github.com/Amperstrand/embassy-stm32f469i-disco"
documentation = "https://docs.rs/embassy-stm32f469i-disco"
keywords = ["embedded", "stm32", "embassy", "async", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]

[lib]
test = false

[features]
default = ["display", "touch"]
display = ["dep:stm32-fmc", "dep:nt35510", "dep:embedded-display-controller", "dep:embedded-graphics", "dep:otm8009a", "dep:embedded-hal-02"]
touch = []
defmt = ["dep:defmt"]
bringup = []

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["stm32f469ni", "time-driver-any", "exti"] }
embassy-time = { version = "0.5.1" }
embassy-usb = { version = "0.6.0" }
cortex-m = "0.7"
defmt = { version = "1.0", optional = true }
embedded-hal = "1.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", optional = true }

# Display dependencies
stm32-fmc = { version = "0.4.0", features = ["sdram"], optional = true }
nt35510 = { git = "https://github.com/Amperstrand/nt35510", rev = "49a372c", optional = true }
otm8009a = { version = "0.1.0", optional = true }
embedded-display-controller = { version = "0.2.0", optional = true }
embedded-graphics = { version = "0.8", optional = true }
stm32-metapac = { version = "21", default-features = false, features = ["stm32f469ni"] }

[dev-dependencies]
embedded-test-linker-script = "0.1.0"
embedded-test = { version = "0.7.1", features = ["embassy-010"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "embassy-time-driver"] }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.8.0" }
defmt = "1.0"
defmt-rtt = { version = "1.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-graphics = "0.8"
cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
stm32-metapac = { version = "21", default-features = false, features = ["stm32f469ni"] }
embedded-io = "0.7"
panic-halt = "1.0"
heapless = "0.8"
linked_list_allocator = "0.10"
static_cell = "2"

[[example]]
name = "async_cdc_minimal"
test = false

[[example]]
name = "board_blinky"
required-features = ["display", "touch"]
test = false

[[example]]
name = "board_display"
required-features = ["display", "touch"]
test = false

[[example]]
name = "board_touch"
required-features = ["display", "touch"]
test = false

[[example]]
name = "display_hybrid"
required-features = ["display"]
test = false

[[example]]
name = "display_touch"
required-features = ["display", "touch"]
test = false

[[example]]
name = "display_touch_rgb565"
required-features = ["display", "touch"]
test = false

[[example]]
name = "extensive_hw_test"
required-features = ["display", "touch"]
test = false

[[example]]
name = "hw_diag"
required-features = ["display", "touch"]
test = false

[[example]]
name = "test_display_interactive"
required-features = ["display"]
test = false

[[example]]
name = "test_usb_cdc_stress"
test = false

[[example]]
name = "raw_dsi_bringup"
path = "examples/bringup/raw_dsi_bringup.rs"
required-features = ["bringup"]
test = false

[[example]]
name = "raw_display_minimal"
path = "examples/bringup/raw_display_minimal.rs"
required-features = ["bringup"]
test = false

[[example]]
name = "clk48_hypothesis"
path = "examples/bringup/clk48_hypothesis.rs"
required-features = ["bringup"]
test = false

[[example]]
name = "nt35510_register_probe"
path = "examples/bringup/nt35510_register_probe.rs"
required-features = ["bringup"]
test = false

[[example]]
name = "sdram_raw"
path = "examples/bringup/sdram_raw.rs"
required-features = ["bringup"]
test = false

[[test]]
name = "on_target"
harness = false
